[package]
name = "duo_server_grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "duo-server"
path = "src/server.rs"

[dependencies]
tonic = "0.10"
prost = "0.12"
mysql = "*"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tonic = { version = "0.10", default-features = true, features = ["transport"] }